<resources>
    <string name="app_name">InmobiliariaApp</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmueble">Inmuebles</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_salir">Salir</string>
</resources>